--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,4 +98,15 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
+    <string name="daily">Daily</string>
+    <string name="weekly">Weekly</string>
+    <string name="monthly">Monthly</string>
+
+    <string name="rides_declined">Rides Declined:</string>
+    <string name="rides_accepted">Rides Accepted:</string>
+    <string name="work_hours">Work Hours:</string>
+    <string name="pay">Pay:</string>
+
+    <string name="startDate">Start Date:</string>
+    <string name="endDate">End Date:</string>
 </resources>
